--- a/package.json
+++ b/package.json
@@ -6,16 +6,22 @@
   "type": "module",
   "scripts": {
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix"
   },
   "keywords": [],
   "author": "Vinicius <viniciuferreira32@gmail.com>",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^22.10.1",
-    "typescript": "^5.7.2",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^2.1.8"
+    "@rocketseat/eslint-config": "^1.2.0",
+    "@types/node": "^18.15.11",
+    "eslint": "^8.39.0",
+    "eslint-plugin-vitest-globals": "^1.3.1",
+    "typescript": "^5.0.4",
+    "vite-tsconfig-paths": "^4.2.0",
+    "vitest": "^0.30.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1"  
   },
   "dependencies": {
     "dayjs": "^1.11.13"
