--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix"
+    "lint:fix": "eslint src/ --ext .ts --fix"
   },
   "keywords": [],
   "author": "Vinicius <viniciuferreira32@gmail.com>",
@@ -16,7 +16,7 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^18.15.11",
-    "eslint": "^8.39.0",
+    "eslint": "8",
     "eslint-plugin-vitest-globals": "^1.3.1",
     "typescript": "^5.0.4",
     "vite-tsconfig-paths": "^4.2.0",
