--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
   "author": "Vinicius <viniciuferreira32@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "@faker-js/faker": "^9.5.1",
     "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^18.15.11",
     "eslint": "8",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "eslint-plugin-vitest-globals": "^1.3.1",
     "typescript": "^5.0.4",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^0.30.1",
-    "eslint-plugin-simple-import-sort": "^12.1.1"  
+    "vitest": "^0.30.1"
   },
   "dependencies": {
     "dayjs": "^1.11.13"
