--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,7 @@
     "@typescript-eslint/adjacent-overload-signatures": "off",
     "simple-import-sort/imports": "error",
     "no-useless-constructor": "off",
+    "@typescript-eslint/no-empty-interface": "off",
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
